--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/ANGULAR/my-app/src/app/app.component.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/ANGULAR/my-app/src/app/app.component.html
@@ -1,4 +1,10 @@
 <app-header></app-header>
-<app-about></app-about>
-<app-terms></app-terms>
+
+<div class="ae-container-fluid ae-container-fluid--inner rk-main">
+  <router-outlet></router-outlet>
+  <!-- <app-about></app-about> -->
+  <!-- <app-portfolio></app-portfolio> -->
+  <!-- <app-terminos></app-terminos> -->
+</div>
+
 <app-footer></app-footer>
