--- a/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/ANGULAR/my-app/src/app/shared/footer/footer.component.html
+++ b/[ECLIPSE] Java Project - Tech Talent 2024/C5-Frontend/ANGULAR/my-app/src/app/shared/footer/footer.component.html
@@ -2,11 +2,11 @@
     <div class="ae-grid ae-grid--collapse">
       <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-left">
         <ul class="rk-menu rk-footer-menu">
-          <li class="rk-menu__item"><a href="about.html" class="rk-menu__link">About</a>
+          <li class="rk-menu__item"><a routerLink="about.html" class="rk-menu__link">About</a>
           </li>
-          <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Docs</a>
+          <li class="rk-menu__item"><a routerLink="documentation.html" class="rk-menu__link">Docs</a>
           </li>
-          <li class="rk-menu__item"><a href="contact.html" class="rk-menu__link">Contact</a>
+          <li class="rk-menu__item"><a routerLink="contact.html" class="rk-menu__link">Contact</a>
           </li>
         </ul>
         <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">2015 URKU PORTFOLIO </span>All Right Reserved.</p>
